--- a/clases/clase_funciones.Rmd
+++ b/clases/clase_funciones.Rmd
@@ -78,10 +78,11 @@ if(d < 0){
 }
 
 
+# rompiendo la condición
 d <- 5
 if(d < 0){
   print("d es un numero negativo")
 }
 ```
 
-
+Cuando d es un numero positivo y no se cumple la condición, la acción no se efectúa.
