--- a/clases/clase_funciones.Rmd
+++ b/clases/clase_funciones.Rmd
@@ -286,3 +286,4 @@ vol(largo = 10, ancho = 8, altura = 5, unidad = "pg")
 
 **Nota:** de esta forma puedes realizar funciones para realizar diferentes calculos acorde a edad, genero o zona geografica.
 
+## Funciones, dplyr y ggplot
